syntax = "proto3";

option java_package = "com.wait.simplescript.lib";
option java_multiple_files = true;
option java_outer_classname = "ScriptProto";

service ScriptService {
  rpc CreateScript (ScriptOperationsReq) returns (ScriptRes) {}
  rpc GetScript (SingleScriptReq) returns (ScriptRes) {}
  rpc GetAllScripts (EmptyReq) returns (ScriptListRes) {}
  rpc UpdateScript (ScriptUpdateReq) returns (ScriptRes) {}
  rpc DeleteScript (SingleScriptReq) returns (EmptyRes) {}
  rpc ExecuteScript (SingleScriptReq) returns (ScriptRes) {}
}

message ScriptOperationsReq {
  repeated string operations = 1;
}

message ScriptRes {
  string id = 1;
  string script_value = 2;
  repeated string executed_output = 3;
  string user_id = 4;
}

message SingleScriptReq {
  string id = 1;
}

message EmptyReq {}
message EmptyRes {}

message ScriptListRes {
  repeated ScriptRes scripts = 1;
}

message ScriptUpdateReq {
  string script_id = 1;
  repeated string operations = 2;
}
