syntax = "proto3";

import "script.proto";

option java_package = "com.wait.simplescript.lib";
option java_multiple_files = true;
option java_outer_classname = "UserProto";

service UserService {
  rpc AddUser (UserReq) returns (UserRes) {}
  rpc GetAllUsers (UserListReq) returns (UserListRes) {}
  rpc UpdateUser (UpdateUserReq) returns (UserRes) {}
  rpc GetUserWithScripts (SingleUserReq) returns (UserWithScripts) {}
}

message UserWithScripts {
  UserRes user = 1;
  repeated ScriptRes scripts = 2;
}

message UserReq {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  repeated string roles = 5;
}

message SingleUserReq {
  string user_id = 1;
}

message UpdateUserReq {
  string user_id = 1;
  UserReq user_updates = 2;
}

message UserRes {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated string roles = 5;
}

message UserListReq {
  string admin_id = 1;
}

message UserListRes {
  repeated UserRes users = 1;
}
